--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Lora:ital,wght@0,400;0,700;1,400&display=swap');
+@import 'mapbox-gl/dist/mapbox-gl.css';
 
 :root {
   /* Default Theme (Dark) */
